--- a/docs/report/sources.bib
+++ b/docs/report/sources.bib
@@ -26,3 +26,10 @@
   volume  = {18},
   pages   = {639--641}
 }
+
+@online{noauthor_paddlepaddlepaddle_nodate,
+	title = {{PaddlePaddle}/Paddle: {PArallel} Distributed Deep {LEarning}: Machine Learning Framework from Industrial Practice （『飞桨』核心框架，深度学习\&机器学习高性能单机、分布式训练和跨平台部署）},
+	url = {https://github.com/PaddlePaddle/Paddle/pull/76699},
+	urldate = {2026-01-08},
+	file = {PaddlePaddle/Paddle\: PArallel Distributed Deep LEarning\: Machine Learning Framework from Industrial Practice （『飞桨』核心框架，深度学习&机器学习高性能单机、分布式训练和跨平台部署）:/home/schlafel/Zotero/storage/XFM2DVF6/76699.html:text/html},
+}
