[doc] add workpackages felix and jan

--- a/docs/report/sources.bib
+++ b/docs/report/sources.bib
@@ -33,3 +33,13 @@
 	urldate = {2026-01-08},
 	file = {PaddlePaddle/Paddle\: PArallel Distributed Deep LEarning\: Machine Learning Framework from Industrial Practice （『飞桨』核心框架，深度学习&机器学习高性能单机、分布式训练和跨平台部署）:/home/schlafel/Zotero/storage/XFM2DVF6/76699.html:text/html},
 }
+
+@techreport{pep703,
+  author       = {Sam Gross},
+  title        = {PEP 703: Making the Global Interpreter Lock Optional in CPython},
+  url          = {\url{https://peps.python.org/pep-0703/}},
+  year         = {2023},
+  type   	   = {PEP},
+  note         = {Accepted Python Enhancement Proposal},
+  organization = {Python Software Foundation}
+}
