--- a/docs/report/sources.bib
+++ b/docs/report/sources.bib
@@ -34,6 +34,66 @@
 	file = {PaddlePaddle/Paddle\: PArallel Distributed Deep LEarning\: Machine Learning Framework from Industrial Practice （『飞桨』核心框架，深度学习&机器学习高性能单机、分布式训练和跨平台部署）:/home/schlafel/Zotero/storage/XFM2DVF6/76699.html:text/html},
 }
 
+@online{schmid_google_2025,
+	title = {Google Gemma 3 Function Calling Example},
+	url = {https://www.philschmid.de/gemma-function-calling},
+	abstract = {Learn how to use function calling with Google {DeepMind} Gemma 3 27B It},
+	author = {Schmid, Philipp},
+	urldate = {2026-01-17},
+	date = {2025-03-14},
+	langid = {english},
+	file = {Snapshot:/home/schlafel/Zotero/storage/AK8WJBSD/gemma-function-calling.html:text/html},
+}
+
+@online{noauthor_gemma34b_nodate,
+	title = {gemma3:4b},
+	url = {https://ollama.com/gemma3:4b},
+	shorttitle = {gemma3},
+	abstract = {The current, most capable model that runs on a single {GPU}.},
+	urldate = {2026-01-17},
+	file = {Snapshot:/home/schlafel/Zotero/storage/AGWX6M2Y/gemma34b.html:text/html},
+}
+
+@online{noauthor_llama31_nodate,
+	title = {llama3.1},
+	url = {https://ollama.com/llama3.1},
+	abstract = {Llama 3.1 is a new state-of-the-art model from Meta available in 8B, 70B and 405B parameter sizes.},
+	urldate = {2026-01-17},
+	file = {Snapshot:/home/schlafel/Zotero/storage/PMGAXQKL/llama3.html:text/html},
+}
+
+@online{noauthor_llama32_nodate,
+	title = {llama3.2},
+	url = {https://ollama.com/llama3.2},
+	abstract = {Meta's Llama 3.2 goes small with 1B and 3B models.},
+	urldate = {2026-01-17},
+	file = {Snapshot:/home/schlafel/Zotero/storage/JLLZGCNI/llama3.html:text/html},
+}
+
+@online{noauthor_qwen3_nodate,
+	title = {qwen3},
+	url = {https://ollama.com/qwen3},
+	abstract = {Qwen3 is the latest generation of large language models in Qwen series, offering a comprehensive suite of dense and mixture-of-experts ({MoE}) models.},
+	urldate = {2026-01-17},
+	file = {Snapshot:/home/schlafel/Zotero/storage/WK748XHD/qwen3.html:text/html},
+}
+
+@online{noauthor_gpt-oss_nodate,
+	title = {gpt-oss},
+	url = {https://ollama.com/gpt-oss},
+	abstract = {OpenAI’s open-weight models designed for powerful reasoning, agentic tasks, and versatile developer use cases.},
+	urldate = {2026-01-17},
+	file = {Snapshot:/home/schlafel/Zotero/storage/WK748XHD/qwen3.html:text/html},
+}
+
+@online{noauthor_deepseek-r1_nodate,
+	title = {gpt-oss},
+	url = {https://ollama.com/deepseek-r1},
+	abstract = {DeepSeek-R1 is a family of open reasoning models with performance approaching that of leading models, such as O3 and Gemini 2.5 Pro.},
+	urldate = {2026-01-17},
+	file = {Snapshot:/home/schlafel/Zotero/storage/WK748XHD/qwen3.html:text/html},
+}
+
 @techreport{pep703,
   author       = {Sam Gross},
   title        = {PEP 703: Making the Global Interpreter Lock Optional in CPython},
