--- a/docs/report/sources.bib
+++ b/docs/report/sources.bib
@@ -103,3 +103,21 @@
   note         = {Accepted Python Enhancement Proposal},
   organization = {Python Software Foundation}
 }
+
+@inproceedings{ocr-comparison,
+    title = "Open-Source {OCR} Libraries: A Comprehensive Study for Low Resource Language",
+    author = "Nazeem, Meharuniza  and
+      R, Anitha  and
+      S, Navaneeth  and
+      R. R, Rajeev",
+    editor = "Lalitha Devi, Sobha  and
+      Arora, Karunesh",
+    booktitle = "Proceedings of the 21st International Conference on Natural Language Processing (ICON)",
+    month = dec,
+    year = "2024",
+    address = "AU-KBC Research Centre, Chennai, India",
+    publisher = "NLP Association of India (NLPAI)",
+    url = "https://aclanthology.org/2024.icon-1.48/",
+    pages = "416--421",
+    abstract = "This paper reviews numerous OCR programs and libraries employed for optical character recognition tasks. Tesser- act OCR, an open-source program that supports multiple lan- guages and image formats, is highlighted for its accuracy and adaptability. Python-based libraries like EasyOCR, MMOCR, and PaddleOCR are also mentioned, which provide user-friendly interfaces and trained models for text extraction, detection, and recognition. EasyOCR emphasizes ease of use and sim- plicity, while MMOCR and PaddleOCR offer comprehensive OCR capabilities and support for a wide range of languages. According to our study, which evaluates various OCR libraries, Tesseract OCR performs remarkably well in terms of accuracy for Indian languages like Malayalam. We focused on five OCR libraries{---}Tesseract OCR, MMOCR, PaddleOCR, EasyOCR, and Keras OCR{---}and tested them across several languages, including English, Hindi, Arabic, Tamil, and Malayalam. During our comparison, we found that Tesseract OCR was the only library that supported the Malayalam language. While the other libraries did not support Malayalam, Tesseract OCR performed well across all tested languages, achieving accuracy rates of 92{\%} in English, 93{\%} in Hindi, 78{\%} in Tamil, 74{\%} in Arabic, and 93{\%} in Malayalam."
+}
